@@ -1,3 +1,7 @@
+2012-10-23  Romain Francois  <romain@r-enthusiasts.com>
+
+	* src/RcppBDTdu.cpp: using bdtDu* instead of object<bdtDu> for function returns
+
 2012-10-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/RcppBDTdt.h:
